tests/kulezi_tests/bad/big_variable_x86.lat
int main() {
    int x_31 = -2147483648;
    return 0;
}